--- a/src/styles/components/LoaderAnimation.module.css
+++ b/src/styles/components/LoaderAnimation.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 5;
 }
